# mlflow-executor

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/mlflow-executor/: backend.py  cli.py  definitions.py  deployer.py  endpoint.py  exceptions.py  predictor.py  project.py  registry.py  settings.py  task.py
src/mlflow-executor/backends/: celery.py  local.py
src/mlflow-executor/callbacks/: db.py
src/mlflow-executor/db/: base.py  models.py
src/mlflow-executor/deployers/: __init__.py  docker.py
src/mlflow-executor/execution/: __init__.py  runner.py
src/mlflow-executor/tasks/: mlflow.py
src/mlflow-executor/testing/: __init__.py  test_tasks.py
src/mlflow-executor/testing/test_project/: MLproject  main.py
src/mlflow_executor/: backend.py  callback.py  deployer.py  endpoint.py  predictor.py  project.py  serializers.py  settings.py  task.py
src/mlflow_executor/backends/: __init__.py  celery.py  local.py  ray.py
src/mlflow_executor/callbacks/: __init__.py  db.py
src/mlflow_executor/db/: engine.py
src/mlflow_executor/deployers/: __init__.py  docker.py  local.py
src/mlflow_executor/execution/: __init__.py  db_utils.py  executor.py  promise.py  runner.py
src/mlflow_executor/projects/: __init__.py  s2s.py
src/mlflow_executor/tasks/: mlflow.py
src/mlflow_executor/testing/: __init__.py  runners.py  tasks.py
src/mlflow_executor/testing/test_project/: requirements.txt
tests/: test_backends.py  test_predictor.py  test_project.py
tests/backends/: test_local.py
tests/projects/: test_s2s.py
tests/web/: test_app.py
